[gd_scene load_steps=65 format=2]

[ext_resource path="res://Entity/Scene2/Starosta.gd" type="Script" id=1]
[ext_resource path="res://Data/Sprites/Man_death.png" type="Texture" id=2]
[ext_resource path="res://Data/Sprites/Man_attack.png" type="Texture" id=3]
[ext_resource path="res://Data/Sprites/Man_idle.png" type="Texture" id=4]
[ext_resource path="res://Data/Sprites/Man_walk.png" type="Texture" id=5]
[ext_resource path="res://Data/Audio/61_Hit_03.wav" type="AudioStream" id=6]
[ext_resource path="res://Data/Audio/Jump 1.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=86]
animations = [ {
"frames": [ SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ) ],
"loop": false,
"name": "attack1",
"speed": 15.0
}, {
"frames": [ SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ) ],
"loop": false,
"name": "attack2",
"speed": 15.0
}, {
"frames": [ SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ) ],
"loop": false,
"name": "attack3",
"speed": 15.0
}, {
"frames": [ SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=123]
extents = Vector2( 20, 34 )

[sub_resource type="Animation" id=88]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=89]
resource_name = "attack1"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=90]
resource_name = "attack2"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=91]
resource_name = "attack3"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=92]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=93]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=94]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=66]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "attack3"

[sub_resource type="AnimationNodeAnimation" id=69]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=72]

[sub_resource type="AnimationNodeStateMachineTransition" id=73]

[sub_resource type="AnimationNodeStateMachineTransition" id=74]

[sub_resource type="AnimationNodeStateMachineTransition" id=75]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=76]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=77]

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=83]

[sub_resource type="AnimationNodeStateMachineTransition" id=84]

[sub_resource type="AnimationNodeStateMachineTransition" id=85]

[sub_resource type="AnimationNodeStateMachine" id=95]
states/attack1/node = SubResource( 66 )
states/attack1/position = Vector2( 683, 57 )
states/attack2/node = SubResource( 67 )
states/attack2/position = Vector2( 474, 106 )
states/attack3/node = SubResource( 68 )
states/attack3/position = Vector2( 335, 118 )
states/death/node = SubResource( 69 )
states/death/position = Vector2( 390, 218 )
states/idle/node = SubResource( 70 )
states/idle/position = Vector2( 202, 57 )
states/walk/node = SubResource( 71 )
states/walk/position = Vector2( 152, 181 )
transitions = [ "idle", "walk", SubResource( 72 ), "walk", "idle", SubResource( 73 ), "idle", "attack1", SubResource( 74 ), "attack1", "attack2", SubResource( 75 ), "attack2", "attack3", SubResource( 76 ), "attack3", "death", SubResource( 77 ), "attack2", "death", SubResource( 78 ), "attack1", "death", SubResource( 79 ), "idle", "death", SubResource( 80 ), "walk", "death", SubResource( 81 ), "attack3", "attack1", SubResource( 82 ), "attack1", "idle", SubResource( 83 ), "attack3", "idle", SubResource( 84 ), "attack2", "idle", SubResource( 85 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=96]

[node name="Starosta" type="RigidBody2D"]
collision_layer = 4
collision_mask = 2
input_pickable = true
mode = 2
gravity_scale = 3.5
contacts_reported = 7
contact_monitor = true
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -21, -14 )
scale = Vector2( 2, 2 )
frames = SubResource( 86 )
animation = "idle"
frame = 1
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 123 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 88 )
anims/attack1 = SubResource( 89 )
anims/attack2 = SubResource( 90 )
anims/attack3 = SubResource( 91 )
anims/death = SubResource( 92 )
anims/idle = SubResource( 93 )
anims/walk = SubResource( 94 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 95 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 96 )

[node name="Down_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Jump_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Answer_timer" type="Timer" parent="."]
wait_time = 12.0

[node name="Down" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_Starosta_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Starosta_input_event"]
[connection signal="timeout" from="Down_timer" to="." method="_on_Down_timer_timeout"]
[connection signal="timeout" from="Jump_timer" to="." method="_on_Jump_timer_timeout"]
[connection signal="timeout" from="Answer_timer" to="." method="_on_Answer_timer_timeout"]
